# side-quests

ascii-animations/: .gitignore  Cargo.toml  README.md
ascii-animations/src/: image_processor.rs  main.rs
cit-cat-coe/: README.md  index.html
cp-player/: .gitignore  CMakeLists.txt
cp-player/include/: Controls.hpp  Player.hpp
cp-player/src/: Controls.cpp  Main.cpp  Player.cpp
hilbert-curves/: index.html
image-to-ascii/: .gitignore  Cargo.toml  README.md
image-to-ascii/src/: main.rs
preg/: Cargo.toml  README.md
preg/src/: main.rs
shader-tester/: .gitignore  CMakeLists.txt  README.md
shader-tester/shaders/: default.frag  default.vert  test-shader-2.glsl  test-shader.frag
shader-tester/src/: DefaultShaders.hpp  ImGuiFileDialog.h  Main.cpp  ShaderManager.cpp  ShaderManager.hpp
